Fixed picture spacing.

--- a/main.css
+++ b/main.css
@@ -16,11 +16,17 @@ h2 {
 }
 
 pre {
-	font-size: 13px;
+	font-size: 14px;
 }
 
 p {
 	margin-bottom: 1.5em;
+}
+
+#img {
+    width: 100%;
+    text-align: center;
+    margin-bottom:1.5em;
 }
 
 #wrapper { 
